--- a/pages/project/diapo.html
+++ b/pages/project/diapo.html
@@ -17,19 +17,20 @@
   <body>
     <div id="header">
       <h1>Portfolio</h1>
-      <div id="coords">
-        <p>Language:</p>
-        <ul>
-            <li><a href="fra_proj.html">French</a> : Native</li>
-            <li><a href="eng_proj.html">English</a>: Advanced</li>
-            <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
-        </ul>
-    </div>
+       <div id="coords">
+          <p>Language:</p>
+          <ul>
+              <li><a href="fra_proj.html">French</a> : Native</li>
+              <li><a href="eng_proj.html">English</a>: Advanced</li>
+              <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
+          </ul>
+      </div>
     </div>
     <div id="wrapper">  
       <div id="content">  <!-- third /two-third holder -->
-      <!--  -->
       <!-- <div class="slide" data-index="0"> -->
+        <h2>Game Design</h2>
+        <p>School Project Visual Refs</p>
           <div id="gallery">
               <ul id="navig">
                 <li>
@@ -52,21 +53,19 @@
                     <img alt="Game Design Image 4" src="GameD/gallery-img-33.jpg"  style="width:70%;max-width:180px;"/>
                   </a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="#picture5">
                     <img alt="Game Design Image 5" src="GameD/gallery-img-35.jpg"  style="width:70%;max-width:180px;"/>
                   </a>
-                </li>
+                </li> -->
               </ul>
-
-
 
             <div id="full-picture">
               <div>
                 <img id="picture1" alt="Game Design Big Image 1" src="GameD/gallery-img-30.jpg" />
               </div>
               <div>
-                <img id="picture2" alt="Game Design Big Image 2"  src="GameD/gallery-img-31.jpg" />
+                <img id="picture2" alt="Game Design Big Image 2" src="GameD/gallery-img-31.jpg" />
               </div>
               <div>
                 <img id="picture3" alt="Game Design Big Image 3" src="GameD/gallery-img-32.jpg" />
@@ -74,9 +73,9 @@
               <div>
                 <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
               </div>
-              <div>
-                <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-35jpg" />
-              </div>
+              <!-- <div>
+                <img id="picture4" alt="Game Design Big Image 5" src="GameD/gallery-img-35jpg" />
+              </div> -->
             </div>
           </div>
       </div>
@@ -100,7 +99,7 @@
       </div>
   </div>
 </div>
-<script src="../assets/script3.js"></script>
+<script src="../assets/script2.js"></script>
 </body>
 </html>
 
