--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -12,62 +12,198 @@
 </head>
 <body>
     <div id="header">
-        <div id="top">
+        <!-- <div id="top"> -->
             <div id="header-name">
-                <h1>Germain Hebert Portfolio Fr</h1>
+                <h1>Germain Hebert Portfolio En</h1>
             </div>        
             <div="header-pic">
                 <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
             </div>
             <div id="coords">
-                <p>Langues:</p>
+                <p>Language:</p>
                 <ul>
-                    <li><a href="fra_proj.html">Francais</a> : Maternelle</li>
-                    <li><a href="eng_proj.html">Anglais</a> : Courant</li>
-                    <li><a href="spa_proj.html">Espagnol</a> : Pre-Intermediaire</li>
+                    <li><a href="fra_proj.html">French</a> : Native</li>
+                    <li><a href="eng_proj.html">English</a>: Advanced</li>
+                    <li><a href="spa_proj.html">Spanish</a>: Pre-Intermediate</li>
                 </ul>
             </div>
-        
         </div>
+          
     </div>
         <div id="wrapper">  <!--  body holder -->
             <div id="content">  <!-- third /two-third holder -->
-                    <div class="slideshow">                        
+                <div class="slideshow">                        
                         <div class="slide" data-index="0">
-
                             <h2>Game Design</h2>
                             <p>School Project Visual Refs</p>
-                                    <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
-                                    <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
-                                    <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
-                                    <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
-                                    <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;">
+                            <div id="gallery">
+                                <ul id="navig">
+                                    <li>
+                                        <a href="#picture1">
+                                            <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture2">
+                                            <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture3">
+                                            <img class="mySlide1" src="GameD/gallery-img-32.jpg" alt="Game Design Image 3" style="width:80%;max-width:180px;">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture4">
+                                            <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                        </a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="#picture5">
+                                            <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
+                                        </a>
+                                    </li> -->
+                                </ul>
+
+                                <div id="full-picture">
+                                    <div>
+                                        <img id="picture1" alt="Game Design Big Image 1" src="GameD/gallery-img-30.jpg" />
+                                    </div>
+
+                                    <div>
+                                        <img id="picture2" alt="Game Design Big Image 2"  src="GameD/gallery-img-31.jpg" />
+                                    </div>
+
+                                    <div>
+                                        <img id="picture3" alt="Game Design Big Image 3" src="GameD/gallery-img-32.jpg" />
+                                    </div>
+
+                                    <div>
+                                        <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
+                                    </div>
+                                    <!-- <div>
+                                        <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34jpg" />
+                                    </div> -->
+                                </div>
+                            </div>
                         </div>
+
                         <div class="slide" data-index="1">
 
                             <h2>Level Design</h2>
                             <p>School Project Request</p>
-                            <img class="mySlide2" src="LevelD/gallery-img-03.jpg" alt="Level Design Image 1" style="width:80%;max-width:180px;" >
-                            <img class="mySlide2" src="LevelD/gallery-img-09.jpg" alt="Level Design Image 2" style="width:80%;max-width:180px;" >
-                            <img class="mySlide2" src="LevelD/gallery-img-12.jpg" alt="Level Design Image 3" style="width:80%;max-width:180px;" >
-                            <img class="mySlide2" src="LevelD/gallery-img-20.jpg" alt="Level Design Image 4" style="width:80%;max-width:180px;" >
-                            <img class="mySlide2" src="LevelD/gallery-img-50.jpg" alt="Level Design Image 5" style="width:80%;max-width:180px;" >
-                        </div>
-                        <div class="slide" data-index="2">
+                            <div id="gallery">
+                                <ul id="navig">
+                                    <li>
+                                        <a href="#picture1">
+                                            <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-03.jpg" style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture2">
+                                            <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-09.jpg"  style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture3">
+                                            <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-12.jpg"  style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture4">
+                                            <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-20.jpg" style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture5">
+                                            <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-50.jpg" style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                </ul>
 
-                            <h2>Programming</h2>
-                            <p>School Project Request</p>
-                            <img class="mySlide3" src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
-                            <img class="mySlide3" src="DevsCode/gallery-img-72.jpg" alt="DevsCode Image 2" style="width:80%;max-width:180px;" >
-                            <img class="mySlide3" src="DevsCode/gallery-img-74.jpg" alt="DevsCode Image 3" style="width:80%;max-width:180px;" >
-                            <img class="mySlide3" src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
-                            <img class="mySlide3" src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" >
+                                <div id="full-picture">
+                                    <div>
+                                        <img id="picture1" alt="Level Design Big Image 1" src="LevelD/gallery-img-03.jpg" />
+                                    </div>
+                                    <div>
+                                        <img id="picture2" alt="Level Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
+                                    </div>
+                                    <div>
+                                        <img id="picture3" alt="Level Design Big Image 3" src="LevelD/gallery-img-12.jpg" />
+                                    </div>
+                                    <div>
+                                        <img id="picture4" alt="Level Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
+                                    </div>
+                                    <div>
+                                        <img id="picture5" alt="Level Design Big Image 5" src="LevelD/gallery-img-50.jpg" />
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="nav">
-                            <button class="prev">Prev</button>
-                            <button class="next">Next</button>
-                        </div>           
+
+
+                    <div class="slide" data-index="2">
+
+                        <h2>Programming</h2>
+                        <p>School Project Request</p>
+                        <div id="gallery">
+                            <ul id="navig">
+                                <li>
+                                    <a href="#picture1">
+                                        <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-42.jpg"style="width:80%;max-width:180px;" >
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#picture2">
+                                        <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-72.jpg"  style="width:80%;max-width:180px;" >
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#picture3">
+                                        <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-74.jpg" style="width:80%;max-width:180px;" >
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#picture4">
+                                        <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-77.jpg" style="width:80%;max-width:180px;" >
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#picture5">
+                                        <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-83.jpg"style="width:80%;max-width:180px;" >
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <div id="full-picture">
+                                <div>
+                                    <img id="picture1" alt="CodeDevs Big Image 1" src="DevsCode/gallery-img-42.jpg"/>
+                                </div>
+                                <div>
+                                    <img id="picture2" alt="CodeDevs Big Image 2"  src="DevsCode/gallery-img-72.jpg"  />
+                                </div>
+                                <div>
+                                    <img id="picture3" alt="CodeDevs Big Image 3" src="DevsCode/gallery-img-74.jpg"/>
+                                </div>
+                                <div>
+                                    <img id="picture4" alt="CodeDevs Big Image 4" src="DevsCode/gallery-img-77.jpg" />
+                                </div>
+                                <div>
+                                    <img id="picture5" alt="CodeDevs  Big Image 5" src="DevsCode/gallery-img-83.jpg"/>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <img class="mySlide3" src="DevsCode/gallery-img-42.jpg" alt="DevsCode Image 1" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-72.jpg" alt="DevsCode Image 2" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-74.jpg" alt="DevsCode Image 3" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-77.jpg" alt="DevsCode Image 4" style="width:80%;max-width:180px;" >
+                        <img class="mySlide3" src="DevsCode/gallery-img-83.jpg" alt="DevsCode Image 5" style="width:80%;max-width:180px;" > -->
                     </div>
+                    <!-- <div class="nav">
+                        <button class="prev">Prev</button>
+                        <button class="next">Next</button>
+                    </div>            -->
+                </div>
             </div>
         </div>
     <div id="navigation">
@@ -82,16 +218,15 @@
     <div id="extra">
     <div id="footer">   
         <div id = "menu" align = "middle" >
-            <a href = "../lang/french.html">HOME</a> | 
-            <a href = "./fra_proj.html">PROJECT</a> |
+            <a href = "../lang/english.html">HOME</a> | 
+            <a href = "./eng_proj.html">PROJECT</a> |
             <a href = "../test/index.html">ABOUT</a>  
         </div>
     </div>
 </div>
-<script src="../assets/script3.js"></script>
+<script src="../assets/script2.js"></script>
 </body>
 </html>
-
 
 
 
