--- a/pages/lang/english.html
+++ b/pages/lang/english.html
@@ -48,19 +48,50 @@
                 </div>
             </div>
             <div id="navigation">
+              <!-- <div id="pan"> -->
                 <p><strong>Skills :</strong></p>
                 <h3>Coding</h3>
                 <ul>
                     <li>VS Code</li>
                     <li>GitHub</li>
+                    <div class="aptitude">
+                        <div id="aptitude">
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9733;</span>
+                            <span id="star3">&#9733;</span>
+                            <span id="star4">&#9733;</span>
+                            <span id="star5">&#9733;</span>
+                          </div>
+                        <!-- <span class="star">&#9733;</span>
+                        <span class="star">&#9733;</span>
+                        <span class="star">&#9733;</span>
+                        <span class="star">&#9733;</span>
+                        <span class="star-empty">&#9734;</span> -->
+                        
+                      </div>
                     <li>C++, C, Shell</li>
+                    <div class="aptitude">
+                        <span class="star">&#9733;</span>
+                        <span class="star">&#9733;</span>
+                        <span class="star-empty">&#9734;</span>
+                        <span class="star-empty">&#9734;</span>
+                        <span class="star-empty">&#9734;</span>
+                    </div>
                     <li>VM, MarkDown</li>
                     <li>DB, *AWS</li>
                 </ul>
                 <h3>Design</h3>
                 <ul>
                     <li>Sketchup</li>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star-empty">&#9734;</span>
                     <li>Unity3D</li>
+                    <span class="star">&#9733;</span>
+                    <span class="star-empty">&#9734;</span>
+                    <span class="star-empty">&#9734;</span>
+                    <span class="star-empty">&#9734;</span>
                     <li>Blender</li>
                     <li>Gimp</li>
                 </ul>
@@ -70,6 +101,7 @@
                     <li>CMS / JSon</li>
                     <li>PHP / SQL</li>
                 </ul>
+              </div>  
             </div>
             <div id="extra">
                 <p><strong>Projects</strong></p>
