--- a/pages/lang/french.html
+++ b/pages/lang/french.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
-    <!-- <div id="main"> -->
         <!-- <div id="container"> -->
             <div id="header">
                 <div id="top">
+                    <div id="header-pic">
+                        <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:100%;max-width:180px">
+                    </div>
+
                     <div id="header-name">
                         <h1>Germain Hebert</h1>
                     </div>        
-                    <div="header-pic">
-                        <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-                    </div>
                     <div id="coords">
                         <p>Langues:</p>
                         <ul>
