--- a/pages/lang/french.html
+++ b/pages/lang/french.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
-        <!-- <div id="container"> -->
             <div id="header">
                 <div id="top">
                     <div id="header-pic">
-                        <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:100%;max-width:180px">
+                        <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:200px">
                     </div>
 
                     <div id="header-name">
                         <h1>Germain Hebert</h1>
-                    </div>        
+                    </div> 
+                       
                     <div id="coords">
                         <p>Langues:</p>
                         <ul>
@@ -49,36 +49,60 @@
             </div>
             <div id="navigation">
                 <p><strong>Skills :</strong></p>
-                <h3>Coding</h3>
-                <ul>
-                    <li>VS Code</li>
-                    <li>GitHub</li>
-                    <li>C++, C, Shell</li>
-                    <li>VM, MarkDown</li>
-                    <li>DB, *AWS</li>
-                </ul>
-                <h3>Design</h3>
-                <ul>
-                    <li>Sketchup</li>
-                    <li>Unity3D</li>
-                    <li>Blender</li>
-                    <li>Gimp</li>
-                </ul>
-                <h3>Web</h3>
-                <ul>
-                    <li>HTML / CSS</li>
-                    <li>CMS / JSon</li>
-                    <li>PHP / SQL</li>
-                </ul>
-            </div>
+                    <ul>
+                    <div class="aptitude">
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9733;</span>
+                            <span id="star3">&#9733;</span>
+                            <span id="star4">&#9733;</span>
+                            <span id="star5">&#9733;</span>
+                        <li>VS Code</li>
+                        <li>GitHub</li>
+                        <li>C, BashShell </li>
+                        <li>MarkDown</li>
+                        <li>Sketchup</li>
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9733;</span>
+                            <span id="star3">&#9733;</span>
+                            <span id="star4">&#9733;</span>
+                            <span id="star5">&#9734;</span>
+                        <li>C++, Javascript </li>
+                        <li>HTML / CSS</li>
+                        <li>Virtual Machine</li>
+                        <li>Unity3D</li>
+                        <li>Blender</li>
+                        <li>Gimp</li>
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9733;</span>
+                            <span id="star3">&#9733;</span>
+                            <span id="star4">&#9734;</span>
+                            <span id="star5">&#9734;</span>
+                        <li>Docker</li>
+                        <li>Unity3D</li>
+                        <li>Blender</li>
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9733;</span>
+                            <span id="star3">&#9734;</span>
+                            <span id="star4">&#9734;</span>
+                            <span id="star5">&#9734;</span>
+                        <li>AWS</li>
+                        <li>CMS </li>
+                        <li>PHP / SQL</li>
+                            <span id="star1">&#9733;</span>
+                            <span id="star2">&#9734;</span>
+                            <span id="star3">&#9734;</span>
+                            <span id="star4">&#9734;</span>
+                            <span id="star5">&#9734;</span>
+                        <li>NODE JS / REACT </li>
+                        <li>Phyton</li>
+                
+                    </div>
+                    </ul>
+                  </div>  
+                </div>
             <div id="extra">
                 <p><strong>Projects</strong></p>
-                <h3>Selected</h3>
-                <ul>
-                    <li>Game Design</li>
-                    <li>Level Design</li>
-                    <li>Code And Devs</li>
-                </ul>
+
             </div>
             <div id="footer">        
                 <div  id = "menu" align="middle" >
@@ -88,9 +112,6 @@
                 </div>
             </div>
         <!-- </div> -->
-    <!-- </div> --> -->
-    <!-- <script type="text/javascript">AddFillerLink("content", "navigation", "extra")</script>     -->
-    <!-- </div>
     <script src="./assets/frame.js"></script>
 </body> 
 </html>
