--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -13,13 +13,13 @@
 
 <body>
     <div id="header">
-        <!-- <div id="top"> -->
+        <div id="top">     <!-- three box container -->
+            <!-- <div id="header-pic">
+                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
+            </div> -->
             <div id="header-name">
                 <h1>Germain Hebert Portfolio En</h1>
             </div>        
-            <div="header-pic">
-                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-            </div>
             <div id="coords">
                 <p>Language:</p>
                 <ul>
@@ -29,8 +29,8 @@
                 </ul>
             </div>
         </div>
-          
     </div>
+
         <div id="wrapper">  <!--  body holder -->
             <div id="content">  <!-- third /two-third holder -->
                 <div class="slideshow">                        
