--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div id="header">
-        <!-- <div id="top"> -->
-            <div id="header-name">
-                <h1>Germain Hebert Portfolio En</h1>
-            </div>        
-            <div="header-pic">
+        <div id="top">     <!-- three box container -->
+            <!-- <div id="header-pic">
                 <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-            </div>
+            </div> -->
+            <div id="header-name">
+                <h1>Germain Hebert Portfolio Fr</h1>
+            </div>        
             <div id="coords">
                 <p>Language:</p>
                 <ul>
