ok , now i know

--- a/pages/project/fra_proj.html
+++ b/pages/project/fra_proj.html
@@ -6,16 +6,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Slideshow</title>
-        <link rel="stylesheet" href="../styles/slideshow.css">        
-        <!-- <link rel="stylesheet" href="../styles/init.css">         -->
+        <!-- <link rel="stylesheet" href="../styles/slideshow.css">      -->
+        <link rel="stylesheet" href="../styles/init.css">        
+        <link rel="stylesheet" href="../styles/preset.css">   
     </head>
 </head>
 <body>
     <div id="header">
         <div id="top">     <!-- three box container -->
-            <!-- <div id="header-pic">
-                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-            </div> -->
+
             <div id="header-name">
                 <h1>Germain Hebert Portfolio Fr</h1>
             </div>        
