--- a/pages/project/spa_proj.html
+++ b/pages/project/spa_proj.html
@@ -6,16 +6,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Slideshow</title>
-        <link rel="stylesheet" href="../styles/slideshow.css">        
-        <!-- <link rel="stylesheet" href="../styles/init.css">         -->
+        <!-- <link rel="stylesheet" href="../styles/slideshow.css">       -->
+        <link rel="stylesheet" href="../styles/init.css">        
+        <link rel="stylesheet" href="../styles/preset.css">  
     </head>
 </head>
 <body>
     <div id="header">
         <div id="top">     <!-- three box container -->
-            <!-- <div id="header-pic">
-                <img src="../assets/img_hello_git.jpeg" alt="Hello Git" style="width:50%;max-width:180px">
-            </div> -->
+       
             <div id="header-name">
                 <h1>Germain Hebert Portfolio Es</h1>
             </div>        
@@ -58,11 +57,11 @@
                                         <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
                                     </a>
                                 </li>
-                                <!-- <li>
+                                <li>
                                     <a href="#picture5">
-                                        <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
+                                        <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:80%;max-width:180px;">
                                     </a>
-                                </li> -->
+                                </li>
                             </ul>
 
                             <div id="full-picture">
@@ -96,27 +95,27 @@
                             <ul id="navig">
                                 <li>
                                     <a href="#picture1">
-                                        <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-03.jpg" style="width:80%;max-width:180px;" >
+                                        <img id="picture1" alt="Level Design Image 1"  src="LevelD/gallery-img-s03.jpg" style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture2">
-                                        <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-09.jpg"  style="width:80%;max-width:180px;" >
+                                        <img id="picture2" alt="Level Design Image 2" src="LevelD/gallery-img-s09.jpg"  style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture3">
-                                        <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-12.jpg"  style="width:80%;max-width:180px;" >
+                                        <img id="picture3" alt="Level Design Image 3" src="LevelD/gallery-img-s10.jpg"  style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture4">
-                                        <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-20.jpg" style="width:80%;max-width:180px;" >
+                                        <img id="picture4" alt="Level Design Image 4" src="LevelD/gallery-img-s20.jpg" style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#picture5">
-                                        <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-50.jpg" style="width:80%;max-width:180px;" >
+                                        <img id="picture5" alt="Level Design Image 5" src="LevelD/gallery-img-s50.jpg" style="width:80%;max-width:180px;" >
                                     </a>
                                 </li>
                             </ul>
@@ -129,7 +128,7 @@
                                     <img id="picture2" alt="Level Design Big Image 2"  src="LevelD/gallery-img-09.jpg" />
                                 </div>
                                 <div>
-                                    <img id="picture3" alt="Level Design Big Image 3" src="LevelD/gallery-img-12.jpg" />
+                                    <img id="picture3" alt="Level Design Big Image 3" src="LevelD/gallery-img-10.jpg" />
                                 </div>
                                 <div>
                                     <img id="picture4" alt="Level Design Big Image 4" src="LevelD/gallery-img-20.jpg" />
