en fin pis toute

--- a/pages/project/eng_proj.html
+++ b/pages/project/eng_proj.html
@@ -8,7 +8,7 @@
         <title>Portfolio Slideshow</title>
         <link rel="stylesheet" href="../styles/init.css">        
         <link rel="stylesheet" href="../styles/preset.css">
-        <!-- <link rel="stylesheet" href="../styles/slideshow.css">     -->
+
     </head>
 
 <body>
@@ -41,12 +41,12 @@
                                 <ul id="navig">
                                     <li>
                                         <a href="#picture1">
-                                            <img class="mySlide1" src="GameD/gallery-img-30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s30.jpg" alt="Game Design Image 1" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#picture2">
-                                            <img class="mySlide1" src="GameD/gallery-img-31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s31.jpg" alt="Game Design Image 2" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
                                     <li>
@@ -56,12 +56,12 @@
                                     </li>
                                     <li>
                                         <a href="#picture4">
-                                            <img class="mySlide1" src="GameD/gallery-img-33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s33.jpg" alt="Game Design Image 4" style="width:80%;max-width:180px;">
                                         </a>
                                     </li>
                                     <!-- <li>
                                         <a href="#picture5">
-                                            <img class="mySlide1" src="GameD/gallery-img-34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
+                                            <img class="mySlide1" src="GameD/gallery-img-s34.jpg" alt="Game Design Image 5" style="width:70%;max-width:180px;">
                                         </a>
                                     </li> -->
                                 </ul>
@@ -82,8 +82,9 @@
                                     <div>
                                         <img id="picture4" alt="Game Design Big Image 4" src="GameD/gallery-img-33.jpg" />
                                     </div>
+
                                     <!-- <div>
-                                        <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34jpg" />
+                                        <img id="picture5" alt="Game Design Big Image 5" src="GameD/gallery-img-34.jpg" />
                                     </div> -->
                                 </div>
                             </div>
@@ -142,69 +143,70 @@
                             </div>
                         </div>
 
+                        <div class="slide" data-index="2">
 
-                    <div class="slide" data-index="2">
+                            <h2>Programming</h2>
+                            <p>School Project Request</p>
+                            <div id="gallery">
+                                <ul id="navig">
+                                    <li>
+                                        <a href="#picture20">
+                                            <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-42.jpg"style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture21">
+                                            <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-72.jpg"  style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture22">
+                                            <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-74.jpg" style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture23">
+                                            <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-77.jpg" style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#picture24">
+                                            <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-83.jpg"style="width:80%;max-width:180px;" >
+                                        </a>
+                                    </li>
+                                </ul>
 
-                        <h2>Programming</h2>
-                        <p>School Project Request</p>
-                        <div id="gallery">
-                            <ul id="navig">
-                                <li>
-                                    <a href="#picture20">
-                                        <img id="picture1" alt="CodeDevs Image 1"  src="DevsCode/gallery-img-42.jpg"style="width:80%;max-width:180px;" >
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#picture21">
-                                        <img id="picture2" alt="CodeDevs  Image 2" src="DevsCode/gallery-img-72.jpg"  style="width:80%;max-width:180px;" >
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#picture22">
-                                        <img id="picture3" alt="CodeDevs  Image 3" src="DevsCode/gallery-img-74.jpg" style="width:80%;max-width:180px;" >
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#picture23">
-                                        <img id="picture4" alt="CodeDevs  Image 4" src="DevsCode/gallery-img-77.jpg" style="width:80%;max-width:180px;" >
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#picture24">
-                                        <img id="picture5" alt="CodeDevs  Image 5" src="DevsCode/gallery-img-83.jpg"style="width:80%;max-width:180px;" >
-                                    </a>
-                                </li>
-                            </ul>
-
-                            <div id="full-picture">
-                                <div>
-                                    <img id="picture20" alt="CodeDevs Big Image 1" src="DevsCode/gallery-img-42.jpg"/>
-                                </div>
-                                <div>
-                                    <img id="pictur21" alt="CodeDevs Big Image 2"  src="DevsCode/gallery-img-72.jpg"  />
-                                </div>
-                                <div>
-                                    <img id="picture22" alt="CodeDevs Big Image 3" src="DevsCode/gallery-img-74.jpg"/>
-                                </div>
-                                <div>
-                                    <img id="picture23" alt="CodeDevs Big Image 4" src="DevsCode/gallery-img-77.jpg" />
-                                </div>
-                                <div>
-                                    <img id="picture24" alt="CodeDevs  Big Image 5" src="DevsCode/gallery-img-83.jpg"/>
+                                <div id="full-picture">
+                                    <div>
+                                        <img id="picture20" alt="CodeDevs Big Image 1" src="DevsCode/gallery-img-42.jpg"/>
+                                    </div>
+                                    <div>
+                                        <img id="pictur21" alt="CodeDevs Big Image 2"  src="DevsCode/gallery-img-72.jpg"  />
+                                    </div>
+                                    <div>
+                                        <img id="picture22" alt="CodeDevs Big Image 3" src="DevsCode/gallery-img-74.jpg"/>
+                                    </div>
+                                    <div>
+                                        <img id="picture23" alt="CodeDevs Big Image 4" src="DevsCode/gallery-img-77.jpg" />
+                                    </div>
+                                    <div>
+                                        <img id="picture24" alt="CodeDevs  Big Image 5" src="DevsCode/gallery-img-83.jpg"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
     <div id="navigation">
+        <div id="pan">
         <div class="sidebar">
             <ul class="project-list">
                 <li class="project-item" data-index="0">GameDesign</li>
                 <li class="project-item" data-index="1">LeveDesign</li>
                 <li class="project-item" data-index="2">CodeDevs</li>
             </ul>
+        </div>
         </div>
     </div>
     <div id="extra">
